Remove dependence on Jersey CDI modules
CDI needs to know all known beans when it initializes. Unfortunately,
this is also true for Jersey. This creates a classic chicken-or-egg
problem where we can't start CDI before we start Jersey - meaning we have
to come up with a way to register all the injectable classes required by
Jersey BEFORE we initialize our own CDI context.

The solution here is to implement the JerseyInjectionManager from scratch
to identify all the classes needed by Jersey - then we can move those over
to our CDI context.

--- a/pom.xml
+++ b/pom.xml
@@ -88,11 +88,31 @@
 			<artifactId>jersey-media-jaxb</artifactId>
 			<version>3.0.4</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.glassfish.jersey.inject</groupId>
 			<artifactId>jersey-cdi2-se</artifactId>
 			<version>3.0.4</version>
+		</dependency>-->
+		<!--<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-cdi2-se</artifactId>
+			<version>3.0.4</version>
+		</dependency>-->
+		<!--<dependency>
+			<groupId>org.glassfish.jersey.ext.cdi</groupId>
+			<artifactId>jersey-cdi1x</artifactId>
+			<version>3.0.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.ext.cdi</groupId>
+			<artifactId>jersey-cdi1x-servlet</artifactId>
+			<version>3.0.4</version>
+		</dependency>-->
+		<!--<dependency>
+			<groupId>org.glassfish.jersey.ext.cdi</groupId>
+			<artifactId>jersey-weld2-se</artifactId>
+			<version>3.0.4</version>
+		</dependency>-->
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
