--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,11 @@
 			<artifactId>logback-classic</artifactId>
 			<version>1.3.0-alpha16</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+			<version>2.0.0-alpha7</version>
+		</dependency>
 		<!--<dependency>
 			<groupId>net.openhft</groupId>
 			<artifactId>chronicle-map</artifactId>
