Complete WeldHook implementation
This now allows us to start as many weld instances as we want by
declaring a list with @Inject and @Instances annotations:
	@Inject @Instances(100)
	private List<Instance<TestServer>> servers;

If another list with a different type is created, the container at the
same index will be shared between them.

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,11 @@
 			<version>0.8.2</version>
 		</dependency>
 		<dependency>
+			<groupId>com.evolvedbinary.j8fu</groupId>
+			<artifactId>j8fu</artifactId>
+			<version>1.23.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
 			<version>1.49</version>
