Default channel handler now dynamically creates all its handlers
Before, we were just returning a static list, resulting in instances
being reused between channels (connections).

RegisterQuicHandler was renamed to RegisterQuicChannelHandler and now
takes a lamnda supplier that is executed on each new connection, this
supplier in turn returns the handlers.

--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,7 @@
 				<configuration>
 					<argLine>
 						-javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar
+						-Dorg.jboss.netty.debug=true
 						-Dcoverage-classes=loaded
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=weld.core.impl
