Gag logback and make sure we don't get any output until we want it
Accomplished by temporarily redirecting stdout to a null stream while
we set everything up.

--- a/pom.xml
+++ b/pom.xml
@@ -359,6 +359,11 @@
 				<filtering>false</filtering>
 			</resource>
 		</resources>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+			</testResource>
+		</testResources>
 	</build>
 	<reporting>
 		<plugins>
