--- a/pom.xml
+++ b/pom.xml
@@ -225,12 +225,14 @@
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog=info.picocli
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=jersey.server
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.p2p=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=info.picocli
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli=info.picocli
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli.spork=info.picocli
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.option=info.picocli
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.util=info.picocli
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=ALL-UNNAMED
@@ -242,13 +244,12 @@
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.network.packet=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.producer=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=weld.core.impl
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.option=info.picocli
-						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.util=info.picocli
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.p2p=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=ALL-UNNAMED
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=weld.core.impl
 					</argLine>
 				</configuration>
 			</plugin>
