--- a/pom.xml
+++ b/pom.xml
@@ -170,9 +170,9 @@
 			<version>1.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jmockit</groupId>
+			<groupId>com.github.hazendaz.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
-			<version>1.49</version>
+			<version>1.49.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -214,7 +214,7 @@
 				<version>2.22.2</version>
 				<configuration>
 					<argLine>
-						-javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar
+						-javaagent:"${settings.localRepository}"/com/github/hazendaz/jmockit/jmockit/1.49.3/jmockit-1.49.3.jar
 						-Dorg.jboss.netty.debug=true
 						-Dcoverage-classes=loaded
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
