--- a/pom.xml
+++ b/pom.xml
@@ -466,6 +466,25 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>3.3.0</version>
 			</plugin>
+			<plugin>
+				<groupId>pl.gdela</groupId>
+				<artifactId>socomo-maven</artifactId>
+				<version>2.3.1</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.ow2.asm</groupId>
+						<artifactId>asm</artifactId>
+						<version>9.1</version>
+					</dependency>
+				</dependencies>
+				<executions>
+					<execution>
+						<goals>
+							<goal>analyze</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<resources>
 			<resource>
