Introduce TestFileOutput to the test suite
This is a class that allows for the output of additional data from test
methods. Output is dumped into the target directory in the format:

surefire-output/<class-name-with-package>.<method-name>.txt

The use the class, simply call TestFileOutput.output(string).

--- a/pom.xml
+++ b/pom.xml
@@ -368,6 +368,9 @@
 					<trimStackTrace>false</trimStackTrace>
 					<reuseForks>false</reuseForks>
 					<forkCount>${system.numcores}</forkCount>
+					<systemPropertyVariables>
+						<testoutput.target>${project.build.directory}</testoutput.target>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 			<plugin>
