Add some weld classes to the graal buid time phase
This is needed for them to be properly visible during reflection.

--- a/pom.xml
+++ b/pom.xml
@@ -415,6 +415,9 @@
 					<initializeAtBuildTime>
 						<initializeAtBuildTime>ch.qos.logback</initializeAtBuildTime>
 						<initializeAtBuildTime>org.slf4j</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.logging</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.logging</initializeAtBuildTime>
+						<initializeAtBuildTime>org.jboss.weld.environment.logging</initializeAtBuildTime>
 					</initializeAtBuildTime>
 					<printClassInitialization>true</printClassInitialization>
 					<reflectionConfigurationFiles>
