--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
+        <repositories>
+                    <repository>
+                        <id>Yahoo</id>
+                        <name>halodb repo</name>
+                        <url>https://maven.pkg.github.com/yahoo/HaloDB</url>
+                </repository>
+        </repositories>
 	<dependencies>
 		<dependency>
 			<groupId>info.picocli</groupId>
@@ -188,13 +195,23 @@
 			<version>4.2.0</version>
 			<scope>test</scope>
 		</dependency>
+                <!-- benchmark dependecy -->
                 <dependency>
                         <groupId>org.openjdk.jmh</groupId>
                         <artifactId>jmh-core</artifactId>
                         <version>1.36</version>
                         <scope>test</scope>
                 </dependency>
-
+                <dependency>
+                        <groupId>org.mapdb</groupId>
+                        <artifactId>mapdb</artifactId>
+                        <version>3.0.9</version>
+                </dependency>
+                <dependency>
+                        <groupId>com.oath.halodb</groupId>
+                        <artifactId>halodb</artifactId>
+                        <version>0.5.6</version>
+                </dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -330,6 +347,21 @@
                                 <groupId>pw.krejci</groupId>
                                 <artifactId>jmh-maven-plugin</artifactId>
                                 <version>0.2.2</version>
+                                <configuration>
+                                        <annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.24</version>
+						</path>
+                                                <path>
+                                                        <groupId>org.openjdk.jmh</groupId>
+                                                        <artifactId>jmh-generator-annprocess</artifactId>
+                                                        <version>1.36</version>
+                                                </path>
+					</annotationProcessorPaths>
+                                        <outputFile>benchmarks</outputFile>
+                                </configuration>
                         </plugin>
 		</plugins>
 	</build>
