--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
 		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
         <repositories>
-                    <repository>
+                <repository>
                         <id>Yahoo</id>
                         <name>halodb repo</name>
-                        <url>https://maven.pkg.github.com/yahoo/HaloDB</url>
+                        <url>https://jitpack.io</url>
                 </repository>
         </repositories>
 	<dependencies>
@@ -208,7 +208,7 @@
                         <version>3.0.9</version>
                 </dependency>
                 <dependency>
-                        <groupId>com.oath.halodb</groupId>
+                        <groupId>com.github.yahoo</groupId>
                         <artifactId>halodb</artifactId>
                         <version>0.5.6</version>
                 </dependency>
@@ -360,7 +360,7 @@
                                                         <version>1.36</version>
                                                 </path>
 					</annotationProcessorPaths>
-                                        <outputFile>benchmarks</outputFile>
+                                        <!--<outputFile>benchmarks</outputFile>-->
                                 </configuration>
                         </plugin>
 		</plugins>
